third_party/move/move-compiler-v2/tests/checking/typing/eq_invalid.exp

Diagnostics:
error: cannot use `u128` with an operator which expects a value of type `u8`
   ┌─ tests/checking/typing/eq_invalid.move:13:21
   │
13 │         (0: u8) == (1: u128);
   │                     ^

error: cannot use `bool` with an operator which expects a value of type `integer`
   ┌─ tests/checking/typing/eq_invalid.move:14:14
   │
14 │         0 == false;
   │              ^^^^^

error: cannot use `integer` with an operator which expects a value of type `&integer`
   ┌─ tests/checking/typing/eq_invalid.move:15:15
   │
15 │         &0 == 1;
   │               ^

error: cannot use `&integer` with an operator which expects a value of type `integer`
   ┌─ tests/checking/typing/eq_invalid.move:16:14
   │
16 │         1 == &0;
   │              ^^

error: cannot use `&S` with an operator which expects a value of type `S`
   ┌─ tests/checking/typing/eq_invalid.move:17:14
   │
17 │         s == s_ref;
   │              ^^^^^

error: cannot use `S` with an operator which expects a value of type `&mut S`
   ┌─ tests/checking/typing/eq_invalid.move:18:18
   │
18 │         s_mut == s;
   │                  ^

error: unable to infer instantiation of type `G2<_>` (consider providing type arguments or annotating the type)
   ┌─ tests/checking/typing/eq_invalid.move:28:9
   │
28 │         G2{} == G2{};
   │         ^^^^

error: the operator takes 2 arguments but 3 were provided
   ┌─ tests/checking/typing/eq_invalid.move:35:22
   │
35 │         (1, 2, 3) == (0, 1);
   │                      ^^^^^^

error: the operator takes 3 arguments but 2 were provided
   ┌─ tests/checking/typing/eq_invalid.move:36:19
   │
36 │         (0, 1) == (1, 2, 3);
   │                   ^^^^^^^^^
